--- a/HistoreInternet.html
+++ b/HistoreInternet.html
@@ -152,7 +152,7 @@
         </table>
 
         <figure>
-            <img src="Images/photoReduit.jpg" alt="">
+            <img src="Images/photoReduit.jpg" alt="" width="50%" height="40%">
             <figcaption>Fig.1 - Le premier serveur web, actuellement au musée du CERN, étiqueté « This machine is a
                 server. DO NOT POWER IT DOWN!! »</figcaption>
         </figure>
