Mise à jour après la validation

--- a/HistoreInternet.html
+++ b/HistoreInternet.html
@@ -4,7 +4,7 @@
         <title>HISTOIRE D'INTERNET</title>
         <meta charset="utf-8">
     </head>
-    <body vlink="red" align="justify">
+    <body>
         <h1>HISTOIRE D'INTERNET</h1>
         <p>
             <strong>L’histoire d'Internet </strong>remonte au développement des premiers réseaux de télécommunication.<br>
@@ -20,7 +20,7 @@
             Deux phases d'accélérations se produisirent : à la fin des années 1960-1970, l’application
             pratique des concepts évoqués à la fin des années 1950 et ensuite, dans les années 1990,
             lorsque la popularisation des fondements de l’Internet moderne passa par l’apparition du World
-            Wide Web <a color=red href="WorldWideWeb.html">[lien vers la page World Wide Web]</a>.
+            Wide Web <a href="WorldWideWeb.html">[lien vers la page World Wide Web]</a>.
         </p>
         
         <p>
@@ -32,15 +32,15 @@
             la bulle Internet.
         </p>
         <h2>Chronologie sélective</h2>
-        <table border="1" Cellspacing="0" Cellpadding="5" Width="48%" Height="175">
+        <table>
             
-            <tr bgcolor=grey>
+            <tr>
                 <th><strong>Année</strong></th>
                 <th><strong>Evènement</strong></th>
             </tr>
             <tr>
                 <td><strong>1952</strong></td>
-                <td align="legt">Semi-Automatic Ground Environment : Système d'armes mettant en réseau 40
+                <td>Semi-Automatic Ground Environment : Système d'armes mettant en réseau 40
                     ordinateurs à autant de radars.</td>
             </tr>
             <tr>
@@ -55,7 +55,7 @@
             </tr>
             <tr>
                 <td><strong>1962 </strong></td>
-                <td></th>Début de la recherche par DARPA, une agence du département de la Défense
+                <td>Début de la recherche par DARPA, une agence du département de la Défense
                     américain, où J.C.R. Licklider défend avec succès ses idées relatives à un réseau
                     global d'ordinateurs.</td>
             </tr>
@@ -152,7 +152,7 @@
         </table>
 
         <figure>
-            <img src="Images/photoReduit.jpg" alt="" width="50%" height="40%">
+            <img src="Images/photoReduit.jpg" alt="" width=800 height=800>
             <figcaption>Fig.1 - Le premier serveur web, actuellement au musée du CERN, étiqueté « This machine is a
                 server. DO NOT POWER IT DOWN!! »</figcaption>
         </figure>
