--- a/WorldWideWeb.html
+++ b/WorldWideWeb.html
@@ -24,11 +24,11 @@
         </p>
       
         <p>
-            <q>
+            <blockquote>
                <em> Le web est plus une invention sociale que technologique. Je l’ai conçu pour qu’il ait un
                 effet social – aider les gens à travailler ensemble – et non comme un jouet
                 technologique.</em> — Tim Berners-Lee, Weaving the Web, 1999
-            </q>
+            </blockquote>
         </p>   
         
         <figure>
