balise pre ajouté dans la page Worldwideweb

--- a/WorldWideWeb.html
+++ b/WorldWideWeb.html
@@ -54,7 +54,7 @@
         <h3>Abréviation</h3>
         <p>Voici le code de la première page Web :</p>
         
-            <code>
+            <pre><code>
             &lt;HEADER&gt; <br>
             &lt;TITLE&gt;The World Wide Web project&lt;/TITLE&gt; <br>
             &lt;NEXTID N="55"&gt; <br>
@@ -127,7 +127,7 @@
                     NAME=49 HREF="LineMode/Defaults/Distribution.html"&gt; <br>
                     anonymous FTP&lt;/A&gt; , etc.&lt;/A&gt; <br>
                     &lt;/DL&gt; <br>
-                    &lt;/BODY&gt; </code>
+                    &lt;/BODY&gt; </code></pre> 
 
     </body>
 </html>
